Implement Java FFI system

--- a/TODO
+++ b/TODO
@@ -1,2 +1,4 @@
 - (9/18/18) Completely rework error messages
 - (9/18/18) Possibly move branches of handleSpecials block into separate functions
+- (9/19/18) Implement doubles
+- (9/19/18) Support Lists for FFI
