Add language support for doubles (but not stdlib support); Java FFI functions can now take variable numbers of arguments

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
+- (9/22/18) Implement stdlib support for doubles and full variadic support
 - (9/18/18) Completely rework error messages
 - (9/18/18) Possibly move branches of handleSpecials block into separate functions
-- (9/19/18) Implement doubles
+- (9/19/18) Implement doubles [✓]
 - (9/19/18) Support Lists for FFI
