--- a/TODO
+++ b/TODO
@@ -1,8 +1,8 @@
+- (11/5/18) Fix scoping with special case functions, and factor them out into seperate class
 - (10/28/18) Implement tail recursion
 - (10/2/18) Wrap around divide by 0
 - (10/2/18) Write toString functions for AstNodes [✓]
 - (9/22/18) Implement stdlib support for doubles and full variadic support [✓]
 - (9/18/18) Completely rework error messages
-- (9/18/18) Possibly move branches of handleSpecials block into separate functions
 - (9/19/18) Implement doubles [✓]
 - (9/19/18) Support Lists for FFI [✓]
